# cpu_cuda_compare

./: CMakeLists.txt  ReadMe.md  cuda.cu  cuda_constant.cu  cuda_lock.cu  cuda_texture.cu  cuda_texture_2d.cu  cuda_texture_constant.cu  data_and_figure.xlsx  normal.cu  normal_openMP.cu  timer.cpp  timer.hpp
